[package]
name = "tokio-s7"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
log = "0.4"          # 日志接口
env_logger = "0.11"  # 日志实现（输出到控制台）
chrono = "0.4.41"
thiserror = "2.0.18"